--- a/Files/CSS/dec.css
+++ b/Files/CSS/dec.css
@@ -4,7 +4,7 @@
  margin: 0;
  padding:0;
  font-family: 'Stylish', sans-serif;
- background-color: #000;
+
 }
 
 .Bg{
@@ -52,13 +52,14 @@
 }
 
 #back{
- top:3%;
+ top:1%;
  left: 3%;
  font-size: 25px;
 }
 
 #can{
  margin: 50px 50px;
+ background: #000;
 }
 
 .Game_button{
@@ -70,7 +71,7 @@
 }
 
 
-@media only screen and (max-width:1200px){
+@media only screen and (max-width:1000px){
 
 .Bg img{
  width: 100%;
@@ -89,17 +90,17 @@
 
 
 #can{
- margin: 200px 50px 100px;
+ margin: 150px 50px 50px;
 }
 
 .Game_button{
- width: 80%;
- margin:0% 10%;
+ width: 77%;
+ margin:0% 11%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
- border: 2px solid #fff;
+ border: 4px solid #000;
  background-color: #A2E3FD;
 }
 
